--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -1084,58 +1084,79 @@ record(waveform, "$(DEV):$(PLANE)-DOWN-BPM2-HIST") {
 
 #--- First bunch readouts ------------------------------------------
 
-record(ai, "$(DEV):$(PLANE)-BPM1-UP-POS") {
+record(ai, "$(DEV):$(PLANE)-BPM1-UP-POS-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A4 T=FLOAT")
   field(PREC, "3")
 }
 
-record(ai, "$(DEV):$(PLANE)-BPM1-UP-VALID") {
+record(ai, "$(DEV):$(PLANE)-BPM1-UP-VALID-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A8 T=FLOAT")
-  field(PREC, "3")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A8 T=UINT32")
 }
 
-record(ai, "$(DEV):$(PLANE)-BPM2-UP-POS") {
+record(ai, "$(DEV):$(PLANE)-BPM2-UP-POS-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01AC T=FLOAT")
   field(PREC, "3")
 }
 
-record(ai, "$(DEV):$(PLANE)-BPM2-UP-VALID") {
+record(ai, "$(DEV):$(PLANE)-BPM2-UP-VALID-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B0 T=FLOAT")
-  field(PREC, "3")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B0 T=UINT32")
 }
 
-record(ai, "$(DEV):$(PLANE)-BPM1-DOWN-POS") {
+record(ai, "$(DEV):$(PLANE)-BPM1-DOWN-POS-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B4 T=FLOAT")
   field(PREC, "3")
 }
 
-record(ai, "$(DEV):$(PLANE)-BPM1-DOWN-VALID") {
+record(ai, "$(DEV):$(PLANE)-BPM1-DOWN-VALID-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B8 T=FLOAT")
-  field(PREC, "3")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B8 T=UINT32")
 }
 
-record(ai, "$(DEV):$(PLANE)-BPM2-DOWN-POS") {
+record(ai, "$(DEV):$(PLANE)-BPM2-DOWN-POS-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01BC T=FLOAT")
   field(PREC, "3")
 }
 
-record(ai, "$(DEV):$(PLANE)-BPM2-DOWN-VALID") {
+record(ai, "$(DEV):$(PLANE)-BPM2-DOWN-VALID-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C0 T=FLOAT")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C0 T=UINT32")
+}
+
+record(ai, "$(DEV):$(PLANE)-COL-POS-WAV") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C4 T=FLOAT")
   field(PREC, "3")
+}
+
+record(ai, "$(DEV):$(PLANE)-COL-VALID-WAV") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C8 T=UINT32")
+}
+
+record(ai, "$(DEV):$(PLANE)-KICK1-WAV") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01CC T=UINT32")
+}
+
+record(ai, "$(DEV):$(PLANE)-KICK2-WAV") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01D0 T=UINT32")
 }
