--- a/XFELIBFB/ibfbctrl_tables.template
+++ b/XFELIBFB/ibfbctrl_tables.template
@@ -34,21 +34,21 @@
 #   field(FTVL, "SHORT")
 # }
 # 
-# record(waveform, "$(DEV):$(PLANE)-KICK1-OUT") {
-#   field(SCAN, "I/O Intr")
-#   field(DTYP, "S7gpac")
-#   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0000")
-#   field(NELM, "2708")
-#   field(FTVL, "LONG")
-# }
-# 
-# record(waveform, "$(DEV):$(PLANE)-KICK2-OUT") {
-#   field(SCAN, "I/O Intr")
-#   field(DTYP, "S7gpac")
-#   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x2A50")
-#   field(NELM, "2708")
-#   field(FTVL, "LONG")
-# }
+record(waveform, "$(DEV):$(PLANE)-KICK1-OUT") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0000")
+  field(NELM, "2708")
+  field(FTVL, "LONG")
+}
+
+record(waveform, "$(DEV):$(PLANE)-KICK2-OUT") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x2A50")
+  field(NELM, "2708")
+  field(FTVL, "LONG")
+}
 
 record(aao, "$(DEV):$(PLANE)-FF-TABLE-POS") {
   field(SCAN, "I/O Intr")
