--- a/XFELIBFB/ibfbctrl_waveforms.template
+++ b/XFELIBFB/ibfbctrl_waveforms.template
@@ -9,6 +9,7 @@ record(waveform, "$(DEV):$(PLANE)-FB-POS-ERR") {
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0000")
   field(NELM, "256")
+  field(PREC, "3")
   field(FTVL, "FLOAT")
 }
 
@@ -17,6 +18,7 @@ record(waveform, "$(DEV):$(PLANE)-FB-ANGLE-ERR") {
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0400")
   field(NELM, "256")
+  field(PREC, "3")
   field(FTVL, "FLOAT")
 }
 
@@ -38,18 +40,20 @@ record(waveform, "$(DEV):$(PLANE)-RX-DOWN-BPM2") {
   field(FTVL, "FLOAT")
 }
 
-# record(waveform, "$(DEV):$(PLANE)-FP-I-BPM1") {
-#   field(SCAN, "I/O Intr")
-#   field(DTYP, "S7gpac")
-#   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1000")
-#   field(NELM, "256")
-#   field(FTVL, "FLOAT")
-# }
-# 
+record(waveform, "$(DEV):$(PLANE)-FP-I-BPM1") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1000")
+  field(NELM, "256")
+  field(PREC, "3")
+  field(FTVL, "FLOAT")
+}
+
 # record(waveform, "$(DEV):$(PLANE)-FB-I-BPM2") {
 #   field(SCAN, "I/O Intr")
 #   field(DTYP, "S7gpac")
 #   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1400")
 #   field(NELM, "256")
+#  field(PREC, "3")
 #   field(FTVL, "FLOAT")
 # }
