--- a/XFELIBFB/ibfbctrl_waveforms.template
+++ b/XFELIBFB/ibfbctrl_waveforms.template
@@ -49,11 +49,11 @@ record(waveform, "$(DEV):$(PLANE)-FP-I-BPM1") {
   field(FTVL, "FLOAT")
 }
 
-# record(waveform, "$(DEV):$(PLANE)-FB-I-BPM2") {
-#   field(SCAN, "I/O Intr")
-#   field(DTYP, "S7gpac")
-#   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1400")
-#   field(NELM, "256")
-#  field(PREC, "3")
-#   field(FTVL, "FLOAT")
-# }
+record(waveform, "$(DEV):$(PLANE)-FB-I-BPM2") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1400")
+  field(NELM, "256")
+  field(PREC, "3")
+  field(FTVL, "FLOAT")
+}
