--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -73,6 +73,54 @@ record(bo, "$(DEV):$(PLANE)-RX-HIST-ENA") {
   field(ONAM, "Enabled" )
 }
 
+record(mbbo, "$(DEV):$(PLANE)-DAQ-CH0") {
+  field(DTYP, "S7gpac")
+  field(OUT,  "@$(SRV)/0x015C:0x015C T=UINT8")
+  field(SCAN, "I/O Intr")
+  field(NOBT,"4")
+  field(SHFT, "0")
+  field(ZRVL, "0" )
+  field(ONVL, "1" )
+  field(ZRST, "Position" )
+  field(ONST, "FF Table" )
+}
+
+record(mbbo, "$(DEV):$(PLANE)-DAQ-CH1") {
+  field(DTYP, "S7gpac")
+  field(OUT,  "@$(SRV)/0x015D:0x015D T=UINT8")
+  field(SCAN, "I/O Intr")
+  field(NOBT,"4")
+  field(SHFT, "0")
+  field(ZRVL, "0" )
+  field(ONVL, "1" )
+  field(ZRST, "Pos error" )
+  field(ONST, "FB output" )
+}
+
+record(mbbo, "$(DEV):$(PLANE)-DAQ-CH2") {
+  field(DTYP, "S7gpac")
+  field(OUT,  "@$(SRV)/0x015E:0x015E T=UINT8")
+  field(SCAN, "I/O Intr")
+  field(NOBT,"4")
+  field(SHFT, "0")
+  field(ZRVL, "0" )
+  field(ONVL, "1" )
+  field(ZRST, "Integrator output" )
+  field(ONST, "Sync pos error" )
+}
+
+record(mbbo, "$(DEV):$(PLANE)-DAQ-CH3") {
+  field(DTYP, "S7gpac")
+  field(OUT,  "@$(SRV)/0x015F:0x015F T=UINT8")
+  field(SCAN, "I/O Intr")
+  field(NOBT,"4")
+  field(SHFT, "0")
+  field(ZRVL, "0" )
+  field(ONVL, "1" )
+  field(ZRST, "Kick amplitude" )
+  field(ONST, "FB out integer" )
+}
+
 # record(longout, "$(DEV):$(PLANE)-BUNCH-NUM") {
 #   field(DTYP, "S7gpac")
 #   field(OUT,  "@$(SRV)/0x000C:0x000C T=UINT16")
