--- a/XFELIBFB/ibfbctrl_waveforms.template
+++ b/XFELIBFB/ibfbctrl_waveforms.template
@@ -76,33 +76,24 @@ record(waveform, "$(DEV):$(PLANE)-DAQ-CH31") {
   field(FTVL, "FLOAT")
 }
 
-##record(waveform, "$(DEV):$(PLANE)-FB-ANGLE-ERR") {
-##  field(SCAN, "I/O Intr")
-##  field(DTYP, "S7gpac")
-##  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0400")
-##  field(NELM, "256")
-##  field(PREC, "3")
-##  field(FTVL, "FLOAT")
-##}
-##
-##record(waveform, "$(DEV):$(PLANE)-RX-DOWN-BPM1") {
-##  field(SCAN, "I/O Intr")
-##  field(DTYP, "S7gpac")
-##  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0800")
-##  field(NELM, "256")
-##  field(PREC, "3")
-##  field(FTVL, "FLOAT")
-##}
-##
-##record(waveform, "$(DEV):$(PLANE)-RX-DOWN-BPM2") {
-##  field(SCAN, "I/O Intr")
-##  field(DTYP, "S7gpac")
-##  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0C00")
-##  field(NELM, "256")
-##  field(PREC, "3")
-##  field(FTVL, "FLOAT")
-##}
-##
+record(waveform, "$(DEV):$(PLANE)-RX-DOWN-BPM1") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x2000")
+  field(NELM, "256")
+  field(PREC, "3")
+  field(FTVL, "FLOAT")
+}
+
+record(waveform, "$(DEV):$(PLANE)-RX-DOWN-BPM2") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x2400")
+  field(NELM, "256")
+  field(PREC, "3")
+  field(FTVL, "FLOAT")
+}
+
 ##record(waveform, "$(DEV):$(PLANE)-FB-I-BPM1") {
 ##  field(SCAN, "I/O Intr")
 ##  field(DTYP, "S7gpac")
