--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -125,8 +125,8 @@ record(mbbo, "$(DEV):$(PLANE)-DAQ-MUX3") {
   field(SHFT, "0")
   field(ZRVL, "0" )
   field(ONVL, "1" )
-  field(ZRST, "DAQ30: Kicker signal (int)" )
-  field(ONST, "DAQ30: FB kicker (int)" )
+  field(ZRST, "DAQ30: Kicker signal " )
+  field(ONST, "DAQ31: FB kicker (int)" )
 }
 
 # record(longout, "$(DEV):$(PLANE)-BUNCH-NUM") {
