--- a/XFELIBFB/ibfbctrl_waveforms.template
+++ b/XFELIBFB/ibfbctrl_waveforms.template
@@ -49,7 +49,7 @@ record(waveform, "$(DEV):$(PLANE)-DAQ-CH20") {
   field(FTVL, "FLOAT")
 }
 
-record(waveform, "$(DEV):$(PLANE)-DAQ-CH21") {
+record(waveform, "$(DEV):$(PLANE)-DAQ-CH21-INT") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1400")
@@ -58,12 +58,11 @@ record(waveform, "$(DEV):$(PLANE)-DAQ-CH21") {
   field(FTVL, "FLOAT")
 }
 
-record(waveform, "$(DEV):$(PLANE)-DAQ-CH30") {
+record(waveform, "$(DEV):$(PLANE)-DAQ-CH30-INT") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1800")
   field(NELM, "256")
-  field(PREC, "3")
   field(FTVL, "INT32")
 }
 
@@ -72,9 +71,41 @@ record(waveform, "$(DEV):$(PLANE)-DAQ-CH31") {
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1c00")
   field(NELM, "256")
-  field(PREC, "3")
   field(FTVL, "INT32")
 }
+
+record(waveform, "$(DEV):$(PLANE)-DAQ-CH00-INT") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0000")
+  field(NELM, "256")
+  field(FTVL, "INT32")
+}
+
+record(waveform, "$(DEV):$(PLANE)-DAQ-CH01-INT") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0400")
+  field(NELM, "256")
+  field(FTVL, "INT32")
+}
+
+record(waveform, "$(DEV):$(PLANE)-DAQ-CH10-INT") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0800")
+  field(NELM, "256")
+  field(FTVL, "INT32")
+}
+
+record(waveform, "$(DEV):$(PLANE)-DAQ-CH11-INT") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x0C00")
+  field(NELM, "256")
+  field(FTVL, "INT32")
+}
+
 
 record(waveform, "$(DEV):$(PLANE)-RX-DOWN-BPM1") {
   field(SCAN, "I/O Intr")
@@ -82,7 +113,7 @@ record(waveform, "$(DEV):$(PLANE)-RX-DOWN-BPM1") {
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x2000")
   field(NELM, "256")
   field(PREC, "3")
-  field(FTVL, "FLOAT")
+  field(FTVL, "INT32")
 }
 
 record(waveform, "$(DEV):$(PLANE)-RX-DOWN-BPM2") {
