--- a/XFELIBFB/ibfbctrl_waveforms.template
+++ b/XFELIBFB/ibfbctrl_waveforms.template
@@ -49,7 +49,7 @@ record(waveform, "$(DEV):$(PLANE)-DAQ-CH20") {
   field(FTVL, "FLOAT")
 }
 
-record(waveform, "$(DEV):$(PLANE)-DAQ-CH21-INT") {
+record(waveform, "$(DEV):$(PLANE)-DAQ-CH21") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1400")
