--- a/XFELIBFB/ibfbctrl_waveforms.template
+++ b/XFELIBFB/ibfbctrl_waveforms.template
@@ -69,7 +69,7 @@ record(waveform, "$(DEV):$(PLANE)-DAQ-CH30-INT") {
 record(waveform, "$(DEV):$(PLANE)-DAQ-CH31-INT") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1c00")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x1C00")
   field(NELM, "256")
   field(FTVL, "LONG")
 }
