--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -1258,3 +1258,27 @@ record(ai, "$(DEV):$(PLANE)-KICK2-WAV") {
   field(DTYP, "S7gpac")
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01D0 T=UINT32")
 }
+
+record(longin, "$(DEV):$(PLANE)-FF-SCAN-STATUS") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01D8 T=UINT8")
+}
+
+record(longin, "$(DEV):$(PLANE)-FF-SCAN-KICKER") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01D9 T=UINT8")
+}
+
+record(longin, "$(DEV):$(PLANE)-FF-SCAN-ITERATION") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01DA T=UINT8")
+}
+
+record(longin, "$(DEV):$(PLANE)-FF-SCAN-POINT") {
+  field(SCAN, "I/O Intr")
+  field(DTYP, "S7gpac")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01DB T=UINT8")
+}
