--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -79,6 +79,12 @@ record(longout, "$(DEV):$(PLANE)-FB-I-SMP-APPLY") {
   field(SCAN, "I/O Intr")
 }
 
+record(longout, "$(DEV):$(PLANE)-FB-I-SMP-SHIFT") {
+  field(DTYP, "S7gpac")
+  field(OUT,  "@$(SRV)/0x015A:0x015A T=UINT8")
+  field(SCAN, "I/O Intr")
+}
+
 record(mbbo, "$(DEV):$(PLANE)-DAQ-MUX0") {
   field(DTYP, "S7gpac")
   field(OUT,  "@$(SRV)/0x015C:0x015C T=UINT8")
