--- a/XFELDEVL/gpac2_service.template
+++ b/XFELDEVL/gpac2_service.template
@@ -1,6 +1,11 @@
 #------------------------------------------------------------------------------
 #-----------            GPAC2 SERVICE FUNCTIONS                ----------------
 #------------------------------------------------------------------------------
+record(longin,"$(DEV):FW-SW-CHECK"){
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (INP,  "@$(SRV)/0x01B8 T=UINT32") 
+}
 
 #------------------------------------------------------------------------------
 # Hardware 
@@ -1461,3 +1466,11 @@ record(scalcout,"$(DEV):MMC-MAC"){
    field (INPB, "$(DEV):MMC-MAC2")
    field (CALC, "PRINTF('0x%04x',A)+PRINTF('%08x',B)")
 }
+
+record(longin,"$(DEV):MMC-PS-FAIL"){
+   field (SCAN, "I/O Intr")
+   field (DTYP, "S7gpac")
+   field (INP,  "@$(SRV)/0x0276 T=UINT8") 
+   field (FLNK, "$(DEV):MMC-MAC2")
+}
+
