--- a/XFELIBFB/ibfbctrl_plane.template
+++ b/XFELIBFB/ibfbctrl_plane.template
@@ -192,7 +192,7 @@ record(longin, "$(DEV):RTMG-SFP2") {
 record(longin, "$(DEV):$(PLANE)-XFELTIM-PULSE") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01D4 T=UINT32")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A4 T=UINT32")
 }
 
 record(ao,"$(DEV):$(PLANE)-FB-FAST-KP") {
@@ -1191,20 +1191,20 @@ record(waveform, "$(DEV):$(PLANE)-DOWN-BPM2-HIST") {
 record(ai, "$(DEV):$(PLANE)-BPM1-UP-POS-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A4 T=FLOAT")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C0 T=FLOAT")
   field(PREC, "3")
 }
 
 record(ai, "$(DEV):$(PLANE)-BPM1-UP-VALID-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01A8 T=UINT32")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01AC T=UINT32")
 }
 
 record(ai, "$(DEV):$(PLANE)-BPM2-UP-POS-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01AC T=FLOAT")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C4 T=FLOAT")
   field(PREC, "3")
 }
 
@@ -1214,55 +1214,73 @@ record(ai, "$(DEV):$(PLANE)-BPM2-UP-VALID-WAV") {
   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B0 T=UINT32")
 }
 
-record(ai, "$(DEV):$(PLANE)-BPM1-DOWN-POS-WAV") {
+# record(ai, "$(DEV):$(PLANE)-BPM1-DOWN-POS-WAV") {
+#   field(SCAN, "I/O Intr")
+#   field(DTYP, "S7gpac")
+#   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B4 T=FLOAT")
+#   field(PREC, "3")
+# }
+
+record(waveform, "$(DEV):$(PLANE)-BPM1-DOWN-POS-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B4 T=FLOAT")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C8")
+  field(NELM, "256")
   field(PREC, "3")
+  field(FTVL, "FLOAT")
 }
 
 record(ai, "$(DEV):$(PLANE)-BPM1-DOWN-VALID-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B8 T=UINT32")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B4 T=UINT32")
 }
 
-record(ai, "$(DEV):$(PLANE)-BPM2-DOWN-POS-WAV") {
+# record(ai, "$(DEV):$(PLANE)-BPM2-DOWN-POS-WAV") {
+#   field(SCAN, "I/O Intr")
+#   field(DTYP, "S7gpac")
+#   field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01BC T=FLOAT")
+#   field(PREC, "3")
+# }
+
+record(waveform, "$(DEV):$(PLANE)-BPM2-DOWN-POS-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01BC T=FLOAT")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x05C8")
+  field(NELM, "256")
   field(PREC, "3")
+  field(FTVL, "FLOAT")
 }
 
 record(ai, "$(DEV):$(PLANE)-BPM2-DOWN-VALID-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C0 T=UINT32")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01B8 T=UINT32")
 }
 
 record(ai, "$(DEV):$(PLANE)-COL-POS-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C4 T=FLOAT")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x09C8 T=FLOAT")
   field(PREC, "3")
 }
 
 record(ai, "$(DEV):$(PLANE)-COL-VALID-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01C8 T=UINT32")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01BC T=UINT32")
 }
 
 record(ai, "$(DEV):$(PLANE)-KICK1-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01CC T=INT32")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x09CC T=INT32")
 }
 
 record(ai, "$(DEV):$(PLANE)-KICK2-WAV") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01D0 T=INT32")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x09D0 T=INT32")
 }
 
 record(longin, "$(DEV):$(PLANE)-FF-SCAN-STATUS") {
@@ -1280,7 +1298,7 @@ record(longin, "$(DEV):$(PLANE)-FF-SCAN-KICKER") {
 record(longin, "$(DEV):$(PLANE)-FF-SCAN-ITERATION") {
   field(SCAN, "I/O Intr")
   field(DTYP, "S7gpac")
-  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01DA T=UINT8")
+  field(INP,  "@$(SRV)/$(READ_OFFSET)+0x01AA T=UINT8")
 }
 
 record(longin, "$(DEV):$(PLANE)-FF-SCAN-POINT") {
